[Improvement-17986][task-plugin] Fix Flink test compatibility with Java 8
- Replace Path.of() with Paths.get() (Path.of is Java 11+)
- Replace Files.readString() with Files.readAllBytes() + new String()
- Ensures tests pass on both Java 8 and Java 11

Made-with: Cursor